--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,5 +146,5 @@ html {
 
 body {
   color: white;
-  background-color: theme('colors.grok.dark');
+  background-color: theme('colors.grok-dark');
 }
